@@ -4,10 +4,10 @@
 # $Id$
 ###########################################################
 
-STARSPAN_VERSION= 1.2.02
+STARSPAN_VERSION= 1.2.03
 
 # Windows StarSpan GUI version
-VERSION= 1.2.02
+VERSION= ${STARSPAN_VERSION}
                 
 # Base dir for generated files
 generated= _generated
